<resources>
    <string name="app_name">WLUG</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="player_error">Error initializing YouTube player: %s</string>
    <string name="seek_to">Jump To</string>
    <string name="seek_to_hint">Seconds</string>
    <string name="action_settings">Settings</string>

    <item name="visible" type="id" />
    <item name="masked" type="id" />

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="this_is_the_image_button">This is the image button</string>
    <string name="post_title">Post Title.....</string>
    <string name="post_description">Post Description.....</string>
    <string name="submit_post">Submit Post</string>
    <string name="post_image_will_be_here">Post image will be here</string>
    <string name="post_title_goes_string_post_image_will_be_here">Post title goes @string/post_image_will_be_here</string>
    <string name="post_description_will_go_string_post_image_will_be_here">Post description will go @string/post_image_will_be_here</string>

    <string name="hello_world">Hello world!</string>
    <string name="select_photo">Select Photo</string>
    <string name="icon_of_image">Icon of image</string>

    <item name="btnSelectPhoto" type="id" />
    <item name="ivImage" type="id" />
</resources>
